2004-12-29 Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.15.4 release.

	Refactored GtkGLExt usage to eliminate GtkVrmlBrowser widget.
	Since OpenVRML is a C++ library, this widget would probably
	never support a useful (C) API.  So it needlessly complicated
	the code.

	* NEWS:  Updates for 0.15.4 release.
	* openvrml.spec.in:  Fixed name of xorg-x11-devel prerequisite
	for the openvrml-gl-devel package.
	* mozilla-plugin/src/Makefile.am:  Removed references to
	GtkVrmlBrowser widget sources.
	* mozilla-plugin/src/openvrml.cpp:  Add GL capabilities and
	event callbacks to a GtkDrawingArea widget rather than use the
	GtkVrmlBrowser widget.
	* mozilla-plugin/src/gtkvrml/vrmlbrowser.cc:  Removed file.
	* mozilla-plugin/src/gtkvrml/vrmlbrowser.h:  Removed file.

2004-12-28 Braden McDaniel  <braden@endoframe.com>

	Added abstract navigation_info_node to the core API.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp

2004-12-25 Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.15.3 release.

	* NEWS
	* INSTALL:  Updated to the one included with Automake 1.9.2.
	* README:  Removed references to GtkGLExt dependency; fixed
	mailing list addresses; eliminated ambiguity regarding required
	vs. optional dependencies (i.e., make it clear that Boost is
	required).
	* configure.ac
	* openvrml.spec.in
	* doc/Doxyfile
	* ide-projects/Windows/VisualC7_1/OpenVRML/antlr/antlr.vcproj:
	Define NDEBUG for Release configuration in the Visual C++ 7.1
	project.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml.vcproj:
	Define NDEBUG for Release configuration in the Visual C++ 7.1
	project.
	* mozilla-plugin/Makefile.am
	* mozilla-plugin/configure.ac:  Don't fail when xpidl isn't